sm/tests/compile-fail/machine-no-debug.rs
extern crate sm;

#[derive(Eq, PartialEq)]
struct HelloWorld;
impl sm::Machine for HelloWorld {}
//~^ ERROR `HelloWorld` doesn't implement `std::fmt::Debug`
